--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -22,7 +22,8 @@
     <ImageView
         android:id="@+id/actor_image"
         android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:onClick="onImageClick"/>
 
     <TextView
         android:id="@+id/actor_name"
